10810
{code}
scala>  val tree = tb.parse("class Meter(val value: Double) extends AnyVal")
tree: tb.u.Tree =
class Meter extends AnyVal {
  <paramaccessor> val value: Double = _;
  def <init>(value: Double) = {
    super.<init>();
    ()
  }
}

scala> tb.define(tree)
<console>:15: error: type mismatch;
 found   : tb.u.Tree
 required: tb.u.ImplDef
              tb.define(tree)
                        ^
{code}
